--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'com.android.application'
+        id 'kotlin-android'
 }
 
 android {
@@ -24,9 +25,12 @@ android {
 	}
 	
 	compileOptions {
-		sourceCompatibility JavaVersion.VERSION_1_8
-		targetCompatibility JavaVersion.VERSION_1_8
+		sourceCompatibility JavaVersion.VERSION_17
+		targetCompatibility JavaVersion.VERSION_17
 	}
+       kotlinOptions {
+                jvmTarget = '17'
+        }
 }
 
 dependencies {
