--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,72 +1,64 @@
 plugins {
-	id 'com.android.application'
-        
+    id 'com.android.application'
 }
 
 android {
-	compileSdk 34
-	
-	useLibrary 'org.apache.http.legacy'
-	
-	defaultConfig {
-		applicationId "tpass.chatme"
-		namespace "tpass.chatme"
-		minSdkVersion 26
-		targetSdkVersion 34
-		versionCode 2
-		versionName "2.0"
-	}
-	
-	buildTypes {
-		release {
-			minifyEnabled false
-			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-		}
-	}
-	
-	compileOptions {
-		sourceCompatibility JavaVersion.VERSION_17
-		targetCompatibility JavaVersion.VERSION_17
-	}
+    compileSdk 34
+    
+    defaultConfig {
+        applicationId "tpass.chatme"
+        namespace "tpass.chatme"
+        minSdkVersion 26
+        targetSdkVersion 34
+        versionCode 2
+        versionName "2.0"
+    }
+    
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled false
+            debuggable true
+        }
+    }
+    
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+    
+    packagingOptions {
+        pickFirst '**/libc++_shared.so'
+        pickFirst '**/libjsc.so'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 dependencies {
-	implementation fileTree(dir: 'libs', include: ['*.jar'])
-	
-	// Material3 and AndroidX
-	implementation 'androidx.appcompat:appcompat:1.6.1'
-	implementation 'com.google.android.material:material:1.12.0'
-	implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-	implementation 'androidx.recyclerview:recyclerview:1.3.2'
-	implementation 'androidx.cardview:cardview:1.0.0'
-	implementation 'androidx.transition:transition:1.5.0'
-	implementation 'androidx.datastore:datastore-preferences:1.1.1'
-	
-	// Firebase
-	implementation platform('com.google.firebase:firebase-bom:33.4.0')
-	implementation 'com.google.firebase:firebase-auth'
-	implementation 'com.google.firebase:firebase-database'
-	implementation 'com.google.firebase:firebase-storage'
-	implementation 'com.google.firebase:firebase-messaging'
-	
-	// Image loading and UI
-	implementation 'com.github.bumptech.glide:glide:4.16.0'
-	implementation 'de.hdodenhof:circleimageview:3.1.0'
-	
-	// Lottie animations
-	implementation 'com.airbnb.android:lottie:6.5.2'
-	
-	// EmojiCompat for iPhone-style emojis
-	implementation 'androidx.emoji2:emoji2:1.4.0'
-	implementation 'androidx.emoji2:emoji2-views:1.4.0'
-	implementation 'androidx.emoji2:emoji2-views-helper:1.4.0'
-	implementation 'androidx.emoji2:emoji2-bundled:1.4.0'
-	
-	// Network and JSON
-	implementation 'com.google.code.gson:gson:2.11.0'
-	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
-	
-	// ViewPager2 for emoji picker
-	implementation 'androidx.viewpager2:viewpager2:1.1.0'
-	implementation 'com.google.android.flexbox:flexbox:3.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    
+    // Core Android
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    
+    // Image loading
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    
+    // Lottie animations
+    implementation 'com.airbnb.android:lottie:6.0.0'
+    
+    // Network
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
 }
