--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
-android.enableR8.fullMode=false
-android.enableJetifier=true
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.daemon=false
 android.useAndroidX=true
+android.enableJetifier=true
