--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.daemon=false
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.java.home=/usr/lib/jvm/java-11-openjdk-amd64
