--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,13 +36,14 @@
     android:configChanges="orientation|screenSize|keyboardHidden|smallestScreenSize|screenLayout"
     android:hardwareAccelerated="true"
     android:supportsPictureInPicture="true"
-    android:screenOrientation="portrait">
+    android:screenOrientation="portrait"
+    android:exported="true"> 
+    
     <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
     </intent-filter>
 
-    <!-- Tambahkan filter SHARE (SEND) di sini -->
     <intent-filter>
         <action android:name="android.intent.action.SEND"/>
         <category android:name="android.intent.category.DEFAULT"/>
@@ -316,4 +317,5 @@ android:resource="@xml/provider_paths" />
 </receiver>
 	</application>
 </manifest>
+
 
