--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,16 +32,16 @@ android {
 dependencies {
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
 	
-	// Material3 and AndroidX
+	// AndroidX core & Material
 	implementation 'androidx.appcompat:appcompat:1.6.1'
-	implementation 'com.google.android.material:material:1.12.0'
+	implementation 'com.google.android.material:material:1.11.0' // <= turunin ke versi stabil
 	implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 	implementation 'androidx.recyclerview:recyclerview:1.3.2'
 	implementation 'androidx.cardview:cardview:1.0.0'
-	implementation 'androidx.transition:transition:1.5.0'
+	implementation 'androidx.transition:transition:1.4.1' // <= turunin, versi 1.5.0 sering bikin error
 	implementation 'androidx.datastore:datastore-preferences:1.1.1'
 	
-	// Firebase
+	// Firebase (pakai BOM biar versi sinkron)
 	implementation platform('com.google.firebase:firebase-bom:33.4.0')
 	implementation 'com.google.firebase:firebase-auth'
 	implementation 'com.google.firebase:firebase-database'
@@ -55,7 +55,7 @@ dependencies {
 	// Lottie animations
 	implementation 'com.airbnb.android:lottie:6.5.2'
 	
-	// EmojiCompat for iPhone-style emojis
+	// EmojiCompat
 	implementation 'androidx.emoji2:emoji2:1.4.0'
 	implementation 'androidx.emoji2:emoji2-views:1.4.0'
 	implementation 'androidx.emoji2:emoji2-views-helper:1.4.0'
@@ -65,7 +65,7 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.11.0'
 	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
 	
-	// ViewPager2 for emoji picker
+	// ViewPager2 & Flexbox
 	implementation 'androidx.viewpager2:viewpager2:1.1.0'
 	implementation 'com.google.android.flexbox:flexbox:3.0.0'
 }
