--- a/gradle.properties
+++ b/gradle.properties
@@ -10,11 +10,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 android.suppressUnsupportedCompileSdk=34
 
-# Enhanced Build Performance
-android.enableR8.fullMode=false
-android.enableBuildCache=true
-android.enableD8.desugaring=true
-
-# Resource Optimization
-android.enableResourceOptimizations=true
-android.enableSeparateAnnotationProcessing=true
+# (Deprecated flags removed: enableR8.fullMode, enableBuildCache, enableD8.desugaring, enableSeparateAnnotationProcessing)
